[package]
name = "ethereum-forkid"
version = "0.2.2"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
repository = "https://github.com/vorot93/ethereum-forkid"
documentation = "https://docs.rs/ethereum-forkid"
description = "Ethereum fork identifier for chain compatibility checks"
keywords = ["ethereum"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
crc = "1"
maplit = "1"
primitive-types = { version = "0.7", default-features = false }
rlp = "0.4"
rlp-derive = "0.1"

[dev-dependencies]
hex-literal = "0.3"
