[package]
name = "ethereum-forkid"
version = "0.7.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
repository = "https://github.com/vorot93/ethereum-forkid"
documentation = "https://docs.rs/ethereum-forkid"
description = "Ethereum fork identifier for chain compatibility checks"
keywords = ["ethereum"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
crc = "1"
maplit = "1"
primitive-types = { version = "0.11", default-features = false }
thiserror = "1"
open-fastrlp = { version = "0.1.2", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.3"
